--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
@@ -18,12 +17,9 @@
 	{% block pageblock %}
 
 	<div id="up">
-		<h1>I am a student from University of Surrey. <br/><br/></h1>
-		<h1>Here is my First Page.<br/></h1>
-		<h3>if you like, you can switch to my <a href="page2.html">Second Page</a>.</h3>
+		<h1>My name is Nuttaphon Tamrapeepithak <br/><br/></h1>
+		<h2><a href="PiEstimation.html"> Here is my Pi values estimation.</a><br/></h2>
 	</div>
-
-	{% include 'form.html' %}
 
 	{% endblock %}
 </body>
